envoy/config/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          generate_request_id: "true"
          tracing:
            operation_name: egress
          add_user_agent: "true"
          access_log:
            - name: envoy.file_access_log
              config:
                path: /var/log/envoy/access.log
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/who"
                route:
                  cluster: who
                  prefix_rewrite: "/v0/who"
              - match:
                  prefix: "/hello"
                route:
                  cluster: hello
                  prefix_rewrite: "/v0/hola"
              - match:
                  prefix: "/where"
                route:
                  cluster: where
                  prefix_rewrite: "/v0/where"
          http_filters:
            #- name: envoy.lua
            #  config:
            #    inline_code: |
            #      function envoy_on_request(request_handle)
            #        request_handle:headers():add("foo", "bar")
            #      end
            #      function envoy_on_response(response_handle)
            #        body_size = response_handle:body():length()
            #        response_handle:headers():add("response-body-size", tostring(body_size))
            #      end
            - name: envoy.router
              config: {}
  clusters:
  - name: hello
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: hello
        port_value: 3333
    health_checks:
        -   timeout: 1s
            interval: 10s
            interval_jitter: 1s
            unhealthy_threshold: 6
            healthy_threshold: 1
            http_health_check:
                path: "/_healthz"
  - name: who
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: who
        port_value: 3333
    health_checks:
        -   timeout: 1s
            interval: 10s
            interval_jitter: 1s
            unhealthy_threshold: 6
            healthy_threshold: 1
            http_health_check:
                path: "/_healthz"
  - name: where
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: where
        port_value: 3333
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
